// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the expense form 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value=""
    />
    <input
      onChange={[Function]}
      onClick={[Function]}
      type="date"
      value={2022-08-09T03:59:29.970Z}
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;

exports[`should render the expense with passed data 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      placeholder="Description"
      type="text"
      value="Water"
    />
    <input
      onChange={[Function]}
      placeholder="Amount"
      type="text"
      value="0.9"
    />
    <input
      onChange={[Function]}
      onClick={[Function]}
      type="date"
      value={0}
    />
    <textarea
      onChange={[Function]}
      placeholder="Add a note for your expense (optional)"
      value=""
    />
    <button>
      Add Expense
    </button>
  </form>
</div>
`;
